# 2023-2024

./: README.md  build.common.gradle
TeamCode/src/main/cpp/: CMakeLists.txt  camera.cpp  libcardinal.hpp  main.cpp  threadutils.hpp
TeamCode/src/main/cpp/include/opencv2/: calib3d.hpp  core.hpp  features2d.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  photo.hpp  stitching.hpp  videoio.hpp
TeamCode/src/main/cpp/include/opencv2/core/: async.hpp  base.hpp  bindings_utils.hpp  cuda.hpp  cvdef.h  ocl.hpp  optim.hpp  ovx.hpp  persistence.hpp  types.hpp  utility.hpp
TeamCode/src/main/cpp/include/opencv2/core/parallel/: parallel_backend.hpp
TeamCode/src/main/cpp/include/opencv2/dnn/: dict.hpp  dnn.hpp
TeamCode/src/main/cpp/include/opencv2/dnn/utils/: inference_engine.hpp
TeamCode/src/main/cpp/include/opencv2/flann/: miniflann.hpp
TeamCode/src/main/cpp/include/opencv2/imgproc/: bindings.hpp  segmentation.hpp
TeamCode/src/main/cpp/include/opencv2/objdetect/: aruco_board.hpp  aruco_detector.hpp  aruco_dictionary.hpp  barcode.hpp  charuco_detector.hpp  face.hpp  graphical_code_detector.hpp
TeamCode/src/main/cpp/include/opencv2/photo/: cuda.hpp
TeamCode/src/main/cpp/include/opencv2/stitching/: warpers.hpp
TeamCode/src/main/cpp/include/opencv2/stitching/detail/: autocalib.hpp  blenders.hpp  camera.hpp  exposure_compensate.hpp  matchers.hpp  motion_estimators.hpp  seam_finders.hpp  timelapsers.hpp  (+2 more)
TeamCode/src/main/cpp/include/opencv2/video/: background_segm.hpp  tracking.hpp
TeamCode/src/main/cpp/include/opencv2/videoio/: registry.hpp
TeamCode/src/main/cpp/src/apriltags/: CMakeLists.txt
(+5 files in other folders)
